View für Namesauflösung

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -9,6 +9,7 @@
       <button mat-button routerLink="/stone-overview">Available Stones</button>
       <button mat-button routerLink='/sensor-contacts'>Sensor Contacts</button>
       <button mat-button routerLink='/graph'>Graph</button>
+      <button mat-button routerLink='/names'>Names</button>
 
       <button mat-button (click)='openFieldtracksAbout()'>About</button>
       <button mat-button (click)='openFieldtracksContact()'>Contact</button>
