--- a/src/app/names/names.component.html
+++ b/src/app/names/names.component.html
@@ -14,6 +14,12 @@
     <td mat-cell *matCellDef="let subject"> {{subject.Major}} / {{subject.Minor}} </td>
   </ng-container>
 
+  <!-- Name Column -->
+  <ng-container matColumnDef="UUID">
+    <th mat-header-cell *matHeaderCellDef> UUID </th>
+    <td mat-cell *matCellDef="let subject"> {{subject.UUID}} </td>
+  </ng-container>
+
   <!-- Weight Column -->
   <ng-container matColumnDef="Mac">
     <th mat-header-cell *matHeaderCellDef> Mac </th>
