--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -16,7 +16,7 @@
         </tr>
         <tr>
           <td><mat-form-field class="example-full-width">
-            <input matInput placeholder="Password" [(ngModel)]="password"type="password" name="password" required>
+            <input matInput placeholder="Password" [(ngModel)]="password" type="password" name="password" (keydown.enter)="login()" required>
           </mat-form-field></td>
         </tr></table>
     </form>
