--- a/src/app/names/names.component.html
+++ b/src/app/names/names.component.html
@@ -1,7 +1,8 @@
-<h2>Sensor Contacts</h2>
-<button (click)='refresh()' >Refresh</button><br>
+<h2>Names</h2>
+<button (click)='refresh()' >Refresh</button>
 <label>Autorefresh:</label>
-<input checked (click)="toggleRefresh()" type="checkbox">
+<input checked (click)="toggleRefresh()" type="checkbox"><br>
+<hr>
 <table mat-table [dataSource]="datasource" class="mat-elevation-z8" width="100%">
 
   <!--- Note that these columns can be defined in any order.
@@ -9,33 +10,38 @@
 
 
   <!-- Name Column -->
-  <ng-container matColumnDef="Major / Minor">
-    <th mat-header-cell *matHeaderCellDef> Major / Minor </th>
-    <td mat-cell *matCellDef="let subject"> {{subject.Major}} / {{subject.Minor}} </td>
+  <ng-container matColumnDef="type">
+    <th mat-header-cell *matHeaderCellDef> </th>
+    <td mat-cell *matCellDef="let subject" [style.background-color]="subject.Color"></td>
   </ng-container>
 
   <!-- Name Column -->
-  <ng-container matColumnDef="UUID">
-    <th mat-header-cell *matHeaderCellDef> UUID </th>
-    <td mat-cell *matCellDef="let subject"> {{subject.UUID}} </td>
+  <ng-container matColumnDef="reception">
+    <th mat-header-cell *matHeaderCellDef> Reception </th>
+    <td mat-cell *matCellDef="let subject" [style.background-color]="subject.Color">{{subject.RSSI}} </td>
   </ng-container>
 
   <!-- Weight Column -->
-  <ng-container matColumnDef="Mac">
-    <th mat-header-cell *matHeaderCellDef> Mac </th>
-    <td mat-cell *matCellDef="let subject"> {{ subject.Mac }} </td>
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef> ID </th>
+    <td mat-cell *matCellDef="let subject" [style.background-color]="subject.Color"> <div *ngIf="!subject.Mac; else mac">{{subject.Major}} / {{subject.Minor}}</div> <ng-template #mac>{{subject.Mac}}</ng-template> </td>
   </ng-container>
 
   <!-- Symbol Column -->
-  <ng-container matColumnDef="Name">
+  <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let subject"> <input [(ngModel)]="subject.Name"> </td>
+    <td mat-cell *matCellDef="let subject" [style.background-color]="subject.Color"> <div *ngIf="!subject.ShowEditnameField" [style.white-space]="'nowrap'"><div *ngIf="subject.Name === undefined || subject.Name === ''; else name">-  <button (click)="subject.ShowEditnameField = !subject.ShowEditnameField">Edit</button></div> <ng-template #name>{{subject.Name}}  <button (click)="subject.ShowEditnameField = !subject.ShowEditnameField">Edit</button></ng-template> </div> <div *ngIf="subject.ShowEditnameField" ><input [(ngModel)]="subject.Name" (focus)="setFocused(subject.Mac)" (focusout)="setFocused('')"><button (click)="publishName(subject.Mac, subject.Name); subject.ShowEditnameField = !subject.ShowEditnameField">Submit</button></div></td>
   </ng-container>
 
   <!-- Symbol Column -->
-  <ng-container matColumnDef="Submit">
-    <th mat-header-cell *matHeaderCellDef> Submit </th>
-    <td mat-cell *matCellDef="let subject"> <button (click)="submitName(subject.Name)">Click Me</button> </td>
+  <ng-container matColumnDef="hardware">
+    <th mat-header-cell *matHeaderCellDef> Hardware </th>
+    <td mat-cell *matCellDef="let subject" [style.background-color]="subject.Color"></td>
+  </ng-container>
+
+  <ng-container matColumnDef="note">
+    <th mat-header-cell *matHeaderCellDef> Note </th>
+    <td mat-cell *matCellDef="let subject" [style.background-color]="subject.Color"> <div *ngIf="subject.UUID !== ownUUID">{{subject.UUID}}</div> </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
