--- a/src/styles.css
+++ b/src/styles.css
@@ -9,3 +9,14 @@
   stroke: #fff;
   stroke-width: 1.5px;
 }
+html, body{
+  font-family:  'Roboto', 'sans-serif';
+}
+html {
+  height: 100%;
+
+}
+body{
+  margin: 0;
+  height: 100%;
+}
