--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-nav></app-nav>
-<router-outlet></router-outlet>
+<mat-sidenav-container>
+  <mat-sidenav [opened]="openSidenav" #sidenav role="navigation">
+  <app-sidenav-list></app-sidenav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <app-header (sidebarTooggle)="sidenav.toggle()"></app-header>
+    <main>
+      <router-outlet></router-outlet>
+
+    </main>
+  </mat-sidenav-content>
+</mat-sidenav-container>
+
