--- a/src/app/sensor-contacts/sensor-contacts.component.html
+++ b/src/app/sensor-contacts/sensor-contacts.component.html
@@ -32,7 +32,7 @@
   <!-- Symbol Column -->
   <ng-container matColumnDef="timestamp">
     <th mat-header-cell *matHeaderCellDef> Timestamp </th>
-    <td mat-cell *matCellDef="let subject"> {{subject.timestmp}} </td>
+    <td mat-cell *matCellDef="let subject"> {{subject.timestamp}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
