--- a/src/app/stones/flashtool/flashtool.component.html
+++ b/src/app/stones/flashtool/flashtool.component.html
@@ -7,14 +7,7 @@
         Version: {{ stone.object.version }}
         <mat-error *ngIf="stone.showOutdatedWarning()" class="warn">Outdated</mat-error>
       </span>
-      <mat-error *ngIf="stone.showWrongNetworkWarning()" >Different network</mat-error>
-
-      <mat-error *ngIf="stone.showUnknownSoftwareWarning()">
-        Unknown Software
-      </mat-error>
-
-
-
+      <mat-error *ngIf="stone.warningText()" [matTooltip]="stone.warningText().tooltip" >{{ stone.warningText().content }}</mat-error>
 
     </mat-card-subtitle>
 
