Fix navigation bug causing dom reload

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
-mat-sidenav-container, mat-sidenav-content, mat-sidenav{
+mat-sidenav-container, mat-sidenav-content, mat-sidenav, mat-drawer, mat-drawer-content, mat-drawer-container{
   height: 100%;
 }
 
