--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -1,17 +1,17 @@
 <mat-nav-list>
-  <a mat-list-item routerLink="/stone-overview" (click)="sidenav.close()">
+  <a mat-list-item routerLink="/stone-overview" (click)="sidenavClose()">
     <mat-icon>developer_board</mat-icon>
     <span class="nav-caption">Stones</span>
   </a>
-  <a mat-list-item routerLink='/sensor-contacts' (click)="sidenav.close()">
+  <a mat-list-item routerLink='/sensor-contacts' (click)="sidenavClose()">
     <mat-icon>settings_remote</mat-icon>
     <span class="nav-caption">Contacts</span>
   </a>
-  <a mat-list-item  routerLink='/graph' (click)="sidenav.close()">
+  <a mat-list-item  routerLink='/graph' (click)="sidenavClose()">
     <mat-icon>my_location</mat-icon>
     <span class="nav-caption">Graph</span>
   </a>
-  <a mat-list-item  routerLink='/names' (click)="sidenav.close()">
+  <a mat-list-item  routerLink='/names' (click)="sidenavClose()">
     <mat-icon>dns</mat-icon>
     <span class="nav-caption">Names</span>
   </a>
