--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -15,7 +15,7 @@
     <mat-icon>dns</mat-icon>
     <span class="nav-caption">Names</span>
   </a>
-  <a mat-list-item  routerLink='/names' (click)="logout()">
+  <a mat-list-item  routerLink='/names'>
     <mat-icon>eject</mat-icon>
     <span class="nav-caption">Logout</span>
   </a>
