--- a/src/app/stones/online/online.component.html
+++ b/src/app/stones/online/online.component.html
@@ -1,4 +1,7 @@
-<table mat-table [dataSource]="datasource" class="mat-elevation-z8" width="100%">
+
+<div class="mat-elevation-z8" width="100%">
+
+  <table matSort mat-table [dataSource]="datasource" width="100%">
 
   <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
@@ -6,36 +9,37 @@
 
   <!-- Name Column -->
   <ng-container matColumnDef="major">
-    <th mat-header-cell *matHeaderCellDef> Major </th>
+    <th mat-header-cell mat-sort-header *matHeaderCellDef> Major </th>
     <td mat-cell *matCellDef="let stone"> {{stone.major}} </td>
   </ng-container>
 
   <!-- Weight Column -->
   <ng-container matColumnDef="minor">
-    <th mat-header-cell *matHeaderCellDef> Minor </th>
+    <th mat-header-cell mat-sort-header *matHeaderCellDef> Minor </th>
     <td mat-cell *matCellDef="let stone"> {{ stone.minor }} </td>
   </ng-container>
 
   <!-- Symbol Column -->
   <ng-container matColumnDef="comment">
-    <th mat-header-cell *matHeaderCellDef> Comment </th>
+    <th mat-header-cell mat-sort-header *matHeaderCellDef> Comment </th>
     <td mat-cell *matCellDef="let stone"> {{stone.comment}} </td>
   </ng-container>
 
   <!-- Symbol Column -->
   <ng-container matColumnDef="age">
-    <th mat-header-cell *matHeaderCellDef> Age </th>
+    <th mat-header-cell mat-sort-header *matHeaderCellDef> Age </th>
     <td mat-cell *matCellDef="let stone"> {{stone.age}} </td>
   </ng-container>
 
   <!-- Symbol Column -->
   <ng-container matColumnDef="lastSeen">
-    <th mat-header-cell *matHeaderCellDef> Last Seen </th>
-    <td mat-cell *matCellDef="let stone"> {{stone.lastSeen}} </td>
+    <th mat-header-cell mat-sort-header *matHeaderCellDef> Last Seen </th>
+    <td mat-cell *matCellDef="let stone"> {{stone.lastSeen.toLocaleString()}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-
 </table>
+<mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" showFirstLastButtons></mat-paginator>
+</div>
