--- a/src/app/stones/online/online.component.html
+++ b/src/app/stones/online/online.component.html
@@ -10,7 +10,7 @@
   <!-- Name Column -->
   <ng-container matColumnDef="major">
     <th mat-header-cell mat-sort-header *matHeaderCellDef> Major </th>
-    <td mat-cell *matCellDef="let stone"> {{stone.major}} </td>
+    <td  mat-cell *matCellDef="let stone"> {{stone.major}} </td>
   </ng-container>
 
   <!-- Weight Column -->
@@ -19,25 +19,27 @@
     <td mat-cell *matCellDef="let stone"> {{ stone.minor }} </td>
   </ng-container>
 
-  <!-- Symbol Column -->
-  <ng-container matColumnDef="comment">
-    <th mat-header-cell mat-sort-header *matHeaderCellDef> Comment </th>
-    <td mat-cell *matCellDef="let stone"> {{stone.comment}} </td>
-  </ng-container>
 
   <!-- Symbol Column -->
-  <ng-container matColumnDef="age">
-    <th mat-header-cell mat-sort-header *matHeaderCellDef> Age </th>
+  <ng-container  matColumnDef="age">
+    <th mat-header-cell mat-sort-header *matHeaderCellDef> Last Contact </th>
     <td mat-cell *matCellDef="let stone"> {{stone.age}} </td>
   </ng-container>
 
   <!-- Symbol Column -->
-  <ng-container matColumnDef="lastSeen">
-    <th mat-header-cell mat-sort-header *matHeaderCellDef> Last Seen </th>
-    <td mat-cell *matCellDef="let stone"> {{stone.lastSeen.toLocaleString()}} </td>
+  <ng-container matColumnDef="lastSeen" >
+    <th fxHide.xs mat-header-cell mat-sort-header *matHeaderCellDef> Last Seen </th>
+    <td  fxHide.xs mat-cell *matCellDef="let stone"> {{stone.lastSeen.toLocaleString()}} </td>
   </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="comment">
+    <th mat-header-cell mat-sort-header *matHeaderCellDef> Comment </th>
+    <td  mat-cell *matCellDef="let stone"> {{stone.comment}} </td>
+  </ng-container>
+
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
 </table>
