--- a/src/app/stone-overview/stone-overview.component.html
+++ b/src/app/stone-overview/stone-overview.component.html
@@ -1,9 +1,7 @@
 
 <mat-tab-group>
   <mat-tab label="Online">
-    <app-online>
-
-    </app-online>
+    <app-online></app-online>
 
   </mat-tab>
   <mat-tab label="Flash & Configure">
