--- a/src/app/names/names-dialog.html
+++ b/src/app/names/names-dialog.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" (ngSubmit)="submit(form)">
+<form [formGroup]="form">
   <h1 mat-dialog-title>Set Name</h1>
   <mat-dialog-content>
     <mat-form-field>
@@ -6,7 +6,7 @@
     </mat-form-field>
   </mat-dialog-content>
   <mat-dialog-actions>
-    <button mat-button type="submit">Set name</button>
-    <button mat-button type="button" mat-dialog-close>Cancel</button>
+    <button mat-button (click)="submit();" type="submit">Set name</button>
+    <button mat-button (click)="cancle()" type="button" mat-dialog-close>Cancel</button>
   </mat-dialog-actions>
 </form>
