--- a/src/app/names/names.component.html
+++ b/src/app/names/names.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="datasource" class="mat-elevation-z8" width="100%">
+<table matSort mat-table [dataSource]="datasource" class="mat-elevation-z8" width="100%">
 
   <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
@@ -6,43 +6,46 @@
 
   <!-- Name Column -->
   <ng-container matColumnDef="type">
-    <th mat-header-cell *matHeaderCellDef> </th>
-    <td mat-cell *matCellDef="let subject" [style.background-color]="subject.Color"></td>
+    <th mat-header-cell mat-sort-header *matHeaderCellDef> </th>
+    <td mat-cell *matCellDef="let subject"></td>
   </ng-container>
 
   <!-- Name Column -->
   <ng-container matColumnDef="reception">
-    <th mat-header-cell *matHeaderCellDef> Reception </th>
-    <td mat-cell *matCellDef="let subject" [style.background-color]="subject.Color">
-      <a mat-list-item>
-        <mat-icon>signal_cellular_4_bar</mat-icon>
-    </a> </td>
+    <th mat-header-cell mat-sort-header *matHeaderCellDef> Reception </th>
+    <td mat-cell *matCellDef="let subject">
+      <img *ngIf="showSignalStrength(subject.rssi, 1);" src="assets/svg/signal_cellular_1_bar.svg">
+      <img *ngIf="showSignalStrength(subject.rssi, 2);" src="assets/svg/signal_cellular_2_bar.svg">
+      <img *ngIf="showSignalStrength(subject.rssi, 3);" src="assets/svg/signal_cellular_3_bar.svg">
+      <img *ngIf="showSignalStrength(subject.rssi, 4);" src="assets/svg/signal_cellular_4_bar.svg">
+    </td>
   </ng-container>
 
   <!-- Weight Column -->
   <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef> ID </th>
-    <td mat-cell *matCellDef="let subject" [style.background-color]="subject.Color"> <div *ngIf="!subject.Mac; else mac">{{subject.Major}} / {{subject.Minor}}</div> <ng-template #mac>{{subject.Mac}}</ng-template> &nbsp;&nbsp;&nbsp;<mat-icon *ngIf="subject.UUID !== ownUUID">warning</mat-icon></td>
+    <th mat-header-cell mat-sort-header *matHeaderCellDef> ID </th>
+    <td mat-cell *matCellDef="let subject"> <div *ngIf="!subject.mac; else mac">{{subject.major}} / {{subject.minor}}</div> <ng-template #mac>{{subject.mac}}</ng-template> &nbsp;&nbsp;&nbsp;<mat-icon matTooltip="This device is registered for an other network" style="font-size: small;" *ngIf="subject.uuid !== ownUUID">warning</mat-icon></td>
   </ng-container>
 
   <!-- Symbol Column -->
   <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let subject" [style.background-color]="subject.Color"> <div *ngIf="!subject.ShowEditnameField" [style.white-space]="'nowrap'"><div *ngIf="subject.Name === undefined || subject.Name === ''; else name">-  <button (click)="openDialog(subject)">Edit</button></div> <ng-template #name>{{subject.Name}}  <button (click)="openDialog(subject)">Edit</button></ng-template> </div> <div *ngIf="subject.ShowEditnameField" ><input [(ngModel)]="subject.Name" (focus)="setFocused(subject.Mac)" (focusout)="setFocused('')"><button (click)="publishName(subject.Mac, subject.Name); subject.ShowEditnameField = !subject.ShowEditnameField">Submit</button></div></td>
+    <th mat-header-cell mat-sort-header *matHeaderCellDef> Name </th>
+    <td mat-cell *matCellDef="let subject"> <div *ngIf="!subject.name || subject.name === ''; else name" >-&nbsp;<mat-icon style="font-size: small;" (click)="openDialog(subject)">edit</mat-icon></div><ng-template #name>{{subject.name}}&nbsp;<mat-icon style="font-size: small;" (click)="openDialog(subject)">edit</mat-icon></ng-template></td>
   </ng-container>
 
   <!-- Symbol Column -->
   <ng-container matColumnDef="hardware">
-    <th mat-header-cell *matHeaderCellDef> Hardware </th>
-    <td mat-cell *matCellDef="let subject" [style.background-color]="subject.Color"></td>
+    <th mat-header-cell mat-sort-header *matHeaderCellDef> Hardware </th>
+    <td mat-cell *matCellDef="let subject"></td>
   </ng-container>
 
   <ng-container matColumnDef="note">
-    <th mat-header-cell *matHeaderCellDef> Note </th>
-    <td mat-cell *matCellDef="let subject" [style.background-color]="subject.Color"> <div *ngIf="subject.UUID !== ownUUID">{{subject.UUID}}</div> </td>
+    <th mat-header-cell mat-sort-header *matHeaderCellDef> Note </th>
+    <td mat-cell *matCellDef="let subject"> <div *ngIf="subject.uuid !== ownUUID; else comment">UUID: {{subject.uuid}}</div><ng-template #comment>Comment: {{subject.comment}}</ng-template> </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
 </table>
+<mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" showFirstLastButtons></mat-paginator>
