Sensor contact refactored

--- a/src/app/names/names-dialog.html
+++ b/src/app/names/names-dialog.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form">
-  <h1 mat-dialog-title>Set Name</h1>
+  <h1 mat-dialog-title>Set Name<br>{{data.mac}}</h1>
   <mat-dialog-content>
     <mat-form-field>
       <input matInput formControlName="name" placeholder="Enter Name">
