--- a/src/app/stones/online/online.component.html
+++ b/src/app/stones/online/online.component.html
@@ -8,15 +8,15 @@
 
 
   <!-- Name Column -->
-  <ng-container matColumnDef="major">
-    <th mat-header-cell mat-sort-header *matHeaderCellDef> Major </th>
-    <td  mat-cell *matCellDef="let stone"> {{stone.major}} </td>
+  <ng-container matColumnDef="major_minor">
+    <th mat-header-cell mat-sort-header *matHeaderCellDef> Major, Minor </th>
+    <td  mat-cell *matCellDef="let stone"> {{stone.major}}, {{stone.minor}} </td>
   </ng-container>
 
   <!-- Weight Column -->
-  <ng-container matColumnDef="minor">
-    <th mat-header-cell mat-sort-header *matHeaderCellDef> Minor </th>
-    <td mat-cell *matCellDef="let stone"> {{ stone.minor }} </td>
+  <ng-container matColumnDef="name">
+    <th mat-header-cell mat-sort-header *matHeaderCellDef> Name </th>
+    <td mat-cell *matCellDef="let stone"> {{ stone.name }} </td>
   </ng-container>
 
 
