--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
             <input matInput name="search" (keydown)="updateSearch()" [(ngModel)]="searchString" class="search_input">
           </mat-form-field>
         </div>
-          <router-outlet></router-outlet>
+          <router-outlet (activate)='routerOutletActivated($event)'></router-outlet>
 
         </main>
       </mat-drawer-content>
