--- a/src/app/names/names.component.html
+++ b/src/app/names/names.component.html
@@ -25,7 +25,7 @@
   <!-- Symbol Column -->
   <ng-container matColumnDef="name">
     <th mat-header-cell mat-sort-header *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let subject"> <div *ngIf="!subject.name || subject.name === ''; else name" >-&nbsp;<mat-icon style="font-size: small;" (click)="openDialog(subject)">edit</mat-icon></div><ng-template #name>{{subject.name}}&nbsp;<mat-icon style="font-size: small;" (click)="openDialog(subject)">edit</mat-icon></ng-template></td>
+    <td mat-cell *matCellDef="let subject"> <div *ngIf="!subject.name || subject.name === ''; else name" >-&nbsp;<mat-icon style="font-size: small;">edit</mat-icon></div><ng-template #name>{{subject.name}}&nbsp;<mat-icon style="font-size: small;" (click)="openDialog(subject)">edit</mat-icon></ng-template></td>
   </ng-container>
   <ng-container matColumnDef="note" >
     <th fxHide.lt-md mat-header-cell mat-sort-header *matHeaderCellDef> Note </th>
@@ -33,6 +33,6 @@
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="openDialog(row)"></tr>
 
 </table>
