Focus search when expanded - hide search on navigation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <app-sidenav-list (sidebarTooggle)="sidenav.close()"></app-sidenav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <app-header (sidebarTooggle)="sidenav.toggle()" (searchToggle)="showToggle = !showToggle"></app-header>
+    <app-header (sidebarTooggle)="sidenav.toggle()" (searchToggle)="toggleSearch()"></app-header>
     <mat-drawer-container class="example-container">
       <mat-drawer mode="side" opened fxHide.lt-sm><app-sidenav-list></app-sidenav-list></mat-drawer>
       <mat-drawer-content>
@@ -13,7 +13,7 @@
             <span matPrefix>
               <mat-icon>search</mat-icon>
             </span>
-            <input matInput name="search" (keydown)="updateSearch()" [(ngModel)]="searchString" class="search_input">
+            <input matInput name="search" #searchInput (keydown)="updateSearch()" [(ngModel)]="searchString" class="search_input">
           </mat-form-field>
         </div>
           <router-outlet (activate)='routerOutletActivated($event)'></router-outlet>
