--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -1,1 +1,8 @@
 <div id="graphDiv"></div>
+
+<mat-menu #menu="matMenu">
+  <button mat-menu-item>
+    <mat-icon>layers</mat-icon>
+    <span>Select Background Image</span>
+  </button>
+</mat-menu>
