--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -1,8 +1,9 @@
 <div id="graphDiv"></div>
 
 <mat-menu #menu="matMenu">
-  <button mat-menu-item>
+  <button mat-menu-item class="upload-drop-zone" (click)="openDialog()">
     <mat-icon>layers</mat-icon>
     <span>Select Background Image</span>
   </button>
+
 </mat-menu>
