--- a/src/app/graph/file-upload-dialog.component.html
+++ b/src/app/graph/file-upload-dialog.component.html
@@ -14,10 +14,8 @@
         </div>
       </div>
 
-      <form [formGroup]="form" (ngSubmit)="onSubmit()">
-        <!--<input type="button" color="primary" matInput(click)="imgFileInput.click()">
-         <input hidden type="file" #imgFileInput (change)="previewImage($event)"/> -->
-          <input type="file" hidden #imgFileInput name="upload" (change)="onFileChange($event)" />
+      <form [formGroup]="form">
+          <input type="file" hidden #imgFileInput name="upload" (change)="onFileChange($event)" accept="image/*" />
       </form>
   </mat-dialog-content>
   <mat-dialog-actions>
@@ -25,31 +23,3 @@
     <button mat-button [disabled]="!canUpload()" (click)="upload()" type="submit">Upload</button>
     <button mat-button (click)="cancel()" type="button" mat-dialog-close>Cancel</button>
 </mat-dialog-actions>
-
-
-<!--
-<h1>Upload your Avatar!</h1>
-<div>
-<div *ngIf="error">
-{{ error.message }}
-</div>
-<div *ngIf="uploadResponse.status === 'error'">
-{{ uploadResponse.message }}
-</div>
-<div *ngIf="uploadResponse.status === 'progress'">
-
-
-<div role="progressbar" [style.width.%]="uploadResponse.message" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-  {{uploadResponse.message}}%
-</div>
-
-</div>
-
-<form [formGroup]="form" (ngSubmit)="onSubmit()">
-
-<input type="file" name="upload" (change)="onFileChange($event)" />
-<button type="submit">Upload</button>
-
-</form>
-</div>
--->
