- Remove side-Navigation to have more space for graph - Graph: Listen to window-resize evennts

--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary" >
 
-  <div fxHide.gt-xs>
+  <div>
     <button mat-icon-button (click)="onToggle()" >
       <mat-icon>menu</mat-icon>
     </button>
