--- a/src/app/stones/flashtool/flashtool.component.html
+++ b/src/app/stones/flashtool/flashtool.component.html
@@ -28,7 +28,7 @@
       <mat-card-actions mat-stroked-button  fxLayout="row" fxLayoutAlign="end" *ngIf="!stone.writing" style="width: 100%">
         <button type="submit" (click)="installSoftware(stone)"  name="flash" [disabled]="f.invalid || stone.uiLocked " style="margin-right: auto" *ngIf="stone.flashButtonVisible()" mat-button matTooltip="Install Software">
           <mat-icon>system_update</mat-icon></button>
-        <button mat-stroked-button  color="primary" (click)="installSoftware(stone)" [disabled]="stone.uiLocked" *ngIf="stone.editButtonVisible()" (click)="editStone(stone)" mat-button matTooltip="Edit configuration">
+        <button mat-stroked-button  color="primary" [disabled]="stone.uiLocked" *ngIf="stone.editButtonVisible()" (click)="editStone(stone)" mat-button matTooltip="Edit configuration">
           <mat-icon>create</mat-icon></button>
         <button name="send" (click)="sendConfig(stone)" mat-flat-button color="primary" type="submit" [disabled]="f.invalid || stone.uiLocked" *ngIf="stone.sendButtonVisible()"  mat-button matTooltip="Send configuration">
           <mat-icon>send</mat-icon>
