Visial prototype Settings

--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -5,5 +5,25 @@
     <mat-icon>layers</mat-icon>
     <span>Select Background Image</span>
   </button>
+  <button mat-menu-item (click)="openSettingsDialog()">
+    <mat-icon>build</mat-icon>
+    <span>Settings</span>
+  </button>
 
+  <button mat-menu-item *ngIf="showUnnamedContacts" (click)="showUnnamedContacts=false" >
+    <mat-icon>check_box</mat-icon>
+    <span>Show unnamed devices</span>
+  </button>
+  <button mat-menu-item *ngIf="showUnnamedContacts == false" (click)="showUnnamedContacts=true" >
+    <mat-icon>check_box_outline_blank</mat-icon>
+    <span>Show unnamned devices</span>
+  </button>
+  <button mat-menu-item *ngIf="showLastContact" (click)="showLastContact = false">
+    <mat-icon>check_box</mat-icon>
+    <span>Show last contact</span>
+  </button>
+  <button mat-menu-item *ngIf="showLastContact == false" (click)="showLastContact = true">
+    <mat-icon>check_box_outline_blank</mat-icon>
+    <span>Show last contact</span>
+  </button>
 </mat-menu>
