D3Widget nach Kompoente

--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -1,4 +1,5 @@
-<div id="graphDiv"></div>
+<app-d3-widget [graph]="graph"></app-d3-widget>
+
 
 <mat-menu #menu="matMenu">
   <button mat-menu-item class="upload-drop-zone" (click)="openDialog()">
