Wirering booleans in menu

--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -11,19 +11,19 @@
     <span>Settings</span>
   </button>
 
-  <button mat-menu-item *ngIf="showUnnamedContacts" (click)="showUnnamedContacts=false" >
+  <button mat-menu-item *ngIf="graphConfig.showUnnamned" (click)="showUnnamed(false)" >
     <mat-icon>check_box</mat-icon>
     <span>Show unnamed devices</span>
   </button>
-  <button mat-menu-item *ngIf="showUnnamedContacts == false" (click)="showUnnamedContacts=true" >
+  <button mat-menu-item *ngIf="!graphConfig.showUnnamned" (click)="showUnnamed(true)" >
     <mat-icon>check_box_outline_blank</mat-icon>
     <span>Show unnamned devices</span>
   </button>
-  <button mat-menu-item *ngIf="showLastContact" (click)="showLastContact = false">
+  <button mat-menu-item *ngIf="graphConfig.showLastContacts" (click)="showLastContact(false)">
     <mat-icon>check_box</mat-icon>
     <span>Show last contact</span>
   </button>
-  <button mat-menu-item *ngIf="showLastContact == false" (click)="showLastContact = true">
+  <button mat-menu-item *ngIf="!graphConfig.showLastContacts" (click)="showLastContact(true)">
     <mat-icon>check_box_outline_blank</mat-icon>
     <span>Show last contact</span>
   </button>
