--- a/src/app/graph/settings-dialog/settings-dialog.component.html
+++ b/src/app/graph/settings-dialog/settings-dialog.component.html
@@ -12,7 +12,7 @@
 
     <mat-form-field>
       <mat-label> Max link age [seconds]</mat-label>
-      <input matInput placeholder="20" name="maxLingAgeSeconds"  (change)="change()" [(ngModel)]="fieldmonConfig.maxLingAgeSeconds" required>
+      <input matInput placeholder="20" name="maxLinkAgeSeconds"  (change)="change()" [(ngModel)]="fieldmonConfig.maxLinkAgeSeconds" required>
       <mat-hint>seconds</mat-hint>
     </mat-form-field>
   </form>
