--- a/src/app/names/names.component.html
+++ b/src/app/names/names.component.html
@@ -14,7 +14,8 @@
   <ng-container matColumnDef="id">
     <th mat-header-cell mat-sort-header *matHeaderCellDef> ID </th>
     <td mat-cell *matCellDef="let subject">
-      <mat-icon style="font-size: small;">{{subject.hardware_str()}}</mat-icon>
+
+      <app-dev-icon [stone]="subject"></app-dev-icon>
       {{ subject.id_str() }}
       <span *ngIf="subject.uuid" fxHide.xs>({{ subject.mac }})</span>
       &nbsp;&nbsp;&nbsp;
